# plopp

./: .buildinfo  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  objects.inv  output.txt  pyproject.toml  pyproject.toml.rej  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  tox.ini.rej
.github/workflows/: build.yml  ci.yml  copier.yml  docs.yml  formatting.yml  main.yml  nightly_at_main.yml  nightly_at_main_lower_bound.yml  nightly_at_release.yml  package_test.yml  pr.yml  release.yml  setup.yml  test.yml  unpinned.yml  update-scipp.yml  weekly_windows_macos.yml
_modules/: index.html  plopp.html
_sources/: index.md
_sources/about/: index.md
_sources/api-reference/: index.md  matplotlib.md  plotly.md  pythreejs.md
_sources/basics/: inspector-plot.ipynb  super-plot.ipynb
_sources/customization/: animations.ipynb  index.md  subplots.ipynb  tweaking-figures.ipynb
_sources/developer/: dependency-management.md
_sources/examples/: gallery.ipynb
_sources/gallery/: index.ipynb  interactive-masking.ipynb  nyc-taxi.ipynb  peeling-layers.ipynb  polar-plots.ipynb  rectangle-selection.ipynb  scatter3d-with-slider.ipynb  tiled-random-samples.ipynb
_sources/getting-started/: installation.md  numpy-pandas-xarray.ipynb  overview.ipynb  saving-figures.ipynb
_sources/plotting/: image-plot.ipynb  index.md  line-plot.ipynb  slicer-plot.ipynb  super-plot.ipynb
_sources/user-guide/: index.md
_static/: documentation_options.js
_static/gallery/: README.txt
about/: about.html  faq.html  index.html  reference.html
api-reference/: index.html  matplotlib.html  plotly.html  pythreejs.html
basics/: image-plot.html  inspector-plot.html  line-plot.html  saving-figures.html  scatter3d-plot.html  slicer-plot.html  super-plot.html
conda/: meta.yaml  recipe.yaml
customization/: animations.html  custom-interfaces.html  graph-node-tips.html  index.html  subplots.html  tweaking-figures.html
developer/: coding-conventions.html  dependency-management.html  getting-started.html  index.html
docs/: _typehints.py  conf.py  conf.py.rej  faq.ipynb  image-plot.ipynb  index.md  index.rst  inspector-plot.ipynb  line-plot.ipynb  reference.rst  slicer-plot.ipynb  version.py
docs/_static/: custom.css
docs/_templates/: doc_version.html
docs/about/: about.md  about.rst  faq.ipynb  index.md  reference.md  reference.rst
docs/api-reference/: index.md  matplotlib.md  pythreejs.md
docs/basics/: image-plot.ipynb  index.md  inspector-plot.ipynb  line-plot.ipynb  operators.ipynb  saving-figures.ipynb  scatter3d-plot.ipynb  slicer-plot.ipynb  super-plot.ipynb
docs/custom-interfaces/: gallery.rst  introduction.ipynb
docs/customization/: animations.ipynb  custom-interfaces.ipynb  graph-node-tips.ipynb  index.md  subplots.ipynb  tweaking-figures.ipynb
docs/developer/: index.md
docs/examples/: custom-interfaces.ipynb  faq.ipynb  gallery.ipynb  index.md
docs/gallery/: index.ipynb  interactive-masking.ipynb  masking-a-range.ipynb  nyc-taxi.ipynb  peeling-layers.ipynb  polar-plots.ipynb  rectangle-selection.ipynb  scatter3d-with-slider.ipynb  scatter3d-with-threshold.ipynb  streaming-plot.ipynb  teapots.ipynb  tiled-continuous-distributions.ipynb  tiled-random-samples.ipynb  updating-scatter.ipynb
docs/getting-started/: index.md  numpy-pandas-xarray.ipynb  overview.ipynb  saving-figures.ipynb
docs/plotting/: image-plot.ipynb  inspector-plot.ipynb  line-plot.ipynb  mesh3d-plot.ipynb  scatter-plot.ipynb  slicer-plot.ipynb
docs/reference/: index.md  plotly.md  pythreejs.md
docs/tutorials/: nodes-tutorial.ipynb
docs/user-guide/: image-plot.ipynb  index.md  inspector-plot.ipynb  line-plot.ipynb  linecutter-plot.ipynb  saving-figures.ipynb  scatter3d-plot.ipynb  slicer-plot.ipynb  super-plot.ipynb
examples/: custom-interfaces.html  gallery.html
examples/gallery/: masking-a-range.html  nyc-taxi.html
gallery/: index.html  interactive-masking.html  masking-a-range.html  nyc-taxi.html  peeling-layers.html  polar-plots.html  rectangle-selection.html  scatter3d-with-slider.html  scatter3d-with-threshold.html  streaming-plot.html  tiled-random-samples.html  updating-scatter.html
getting-started/: index.html  installation.html  numpy-pandas-xarray.html  overview.html  saving-figures.html
plotting/: image-plot.html  index.html  inspector-plot.html  line-plot.html  mesh3d-plot.html  scatter-plot.html  slicer-plot.html  super-plot.html
release/0.0/: genindex.html  image-plot.html  index.html  line-plot.html  objects.inv  search.html  searchindex.js  slicer-plot.html
release/0.1/: genindex.html  image-plot.html  index.html  inspector-plot.html  line-plot.html  objects.inv  search.html  searchindex.js  slicer-plot.html
release/0.2/: .buildinfo  genindex.html  index.html  objects.inv  reference.html  search.html  searchindex.js
release/0.3/: genindex.html  index.html  objects.inv  reference.html  search.html  searchindex.js
release/0.4/: .buildinfo  genindex.html  index.html  reference.html  search.html  searchindex.js
requirements/: all.in  all.txt  base.in  base.txt  basetest.in  basetest.txt  ci.in  ci.txt  constraints.txt  custom.in  custom.txt  dev.txt  docs.in  docs.txt  make_base.py  make_deps.py  mini.in  mini.txt  miniplot.in  miniplot.txt  mypy.txt  nightly.in  nightly.txt  noplotly.in  noplotly.txt  optional.in  optional.txt  static.in  static.txt  test-lowest.in  test-lowest.txt  test.in  test.txt  wheels.txt
src/plopp/: __init__.py  __init__.py.rej  axes.py  common.py  config.py  data.py  displayable.py  figure.py  figure_interactive.py  figure_static.py  gl.py  graph.py  interactive.py  io.py  limits.py  line.py  mesh.py  model.py  plot.py  plotly.py  prep.py  static.py  testing.py  toolbar.py  tools.py  utils.py  view.py  wrappers.py
tests/: conftest.py  graph_nodes_test.py  high_level_test.py  kwargs_test.py  minimal_plot.py  minimal_plot_test.py  package_test.py  wrappers_test.py
tests/core/: graph_test.py  limits_test.py  model_test.py  node_test.py  (+2 more)
user-guide/: index.html
(+400 files in other folders)
