[build-system]
requires = [
  "setuptools>=68",
  "setuptools_scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "plopp"
description = "Visualization library for Scipp"
authors = [{ name = "Scipp contributors" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.9"

# IMPORTANT:
# Run 'tox -e deps' after making changes here. This will update requirement files.
# Make sure to list one dependency per line.
dependencies = [
  "matplotlib>=3.5",
]

dynamic = ["version"]

[project.optional-dependencies]
scipp = ["scipp"]
all = ["scipp", "ipympl", "pythreejs", "mpltoolbox"]

[project.urls]
"Bug Tracker" = "https://github.com/scipp/plopp/issues"
"Documentation" = "https://scipp.github.io/plopp"
"Source" = "https://github.com/scipp/plopp"

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = """
--strict-config
--strict-markers
-ra
-v
"""
testpaths = "tests"
filterwarnings = [
  "error",
  'ignore:\n            Sentinel is not a public part of the traitlets API:DeprecationWarning',
  'ignore:Passing unrecognized arguments to super:DeprecationWarning',
  'ignore:Jupyter is migrating its paths:DeprecationWarning',
  'ignore:setDaemon\(\) is deprecated, set the daemon attribute instead:DeprecationWarning',
]

[tool.bandit]
# Excluding tests because bandit doesn't like `assert`.
exclude_dirs = ["docs/conf.py", "tests"]

[tool.black]
skip-string-normalization = true

[tool.isort]
skip_gitignore = true
profile = "black"
known_first_party = ["plopp"]

[tool.mypy]
strict = true
ignore_missing_imports = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
show_error_codes = true
warn_unreachable = true
